# InvalidGameEngine

./: CMakeLists.txt  camera.cpp  camera.hpp  config.yml  light_renderer.cpp  light_renderer.hpp  main.cpp  mesh.cpp  mesh.hpp  shader_loader.cpp  shader_loader.hpp
assets/shaders/: flat_model.fs  flat_model.vs
include/: version.h.in
